fluxcd/infra/envoy-kube-proxy/prod/patch-deployment.yaml
#trivy:ignore:KSV-0118
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-kube-proxy
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role.core
                    operator: Exists
      tolerations:
        - key: "CriticalAddonsOnly"
          operator: "Exists"
          effect: "NoSchedule"
        - key: "role.core"
          operator: "Exists"
          effect: "NoSchedule"
